src/app/resources/resources-add.scss
@import '../variables';

:host {
  .view-container {
    display: grid;
    grid-template-rows: auto 42px;
    > * {
      overflow-y: auto;
    }
  }

  .actions-container {
    align-self: center;
  }

  .form-spacing {
    width: auto;
    justify-content: center;
  }

  @media (max-width: $screen-sm) {
    .form-container {
      width: auto;
    }
  }
}

